--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       };
 
       // 🔹 Standardbild, falls kein Boden-Typ angegeben wurde
-      var bodenBild = bodenBilder[bodenTyp] || "https://dein-server.com/default.jpg";
+      var bodenBild = bodenBilder[bodenTyp] || "https://github.com/Walch89/Bodenbel-ge/blob/main/Bodenbelag.jpg";
 
       // 🔹 Textur laden & sichtbar machen
       var bodenPlane = document.getElementById("boden");
