--- a/index.html
+++ b/index.html
@@ -1,99 +1,92 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <title>AR Bodenbelag</title>
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.7.2/aframe/build/aframe-ar.min.js"></script>
-    <script src="https://hammerjs.github.io/dist/hammer.min.js"></script>
-  </head>
-  
-  <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;"
-             vr-mode-ui="enabled: false" 
-             renderer="logarithmicDepthBuffer: true; precision: medium;">
-      
-      <a-assets>
-        <img id="boden-textur" src="" crossorigin="anonymous">
-      </a-assets>
+    <script src="https://cdn.jsdelivr.net/npm/aframe-xr@latest/dist/aframe-xr.min.js"></script>
+</head>
 
-      <!-- Interaktive Bodenfläche -->
-      <a-plane id="boden" src="#boden-textur" 
-               position="0 0 0" rotation="-90 0 0" 
-               width="5" height="5" 
-               gesture-handler shadow>
-      </a-plane>
-      
-      <a-marker-camera preset="hiro"></a-marker-camera>
+<body style="margin: 0; overflow: hidden;">
+    <a-scene embedded xr-mode-ui="enabled: true" webxr="optionalFeatures: hit-test;">
+        <a-assets>
+            <img id="boden-textur" src="" crossorigin="anonymous">
+        </a-assets>
+
+        <!-- Platzhalter für AR-Boden -->
+        <a-entity id="placement-marker" visible="false">
+            <a-ring color="yellow" radius-inner="0.15" radius-outer="0.2"></a-ring>
+        </a-entity>
+
+        <!-- Bodenfläche -->
+        <a-plane id="boden" visible="false" rotation="-90 0 0" width="5" height="5"></a-plane>
+
+        <a-camera position="0 1.6 0" look-controls>
+            <a-cursor id="cursor" raycaster="objects: #placement-marker"></a-cursor>
+        </a-camera>
     </a-scene>
 
     <script>
-      // 🔹 Korrekte URL für Bilder (GitHub-kompatibel)
-      function getRawGitHubURL(url) {
-          return url.replace("github.com", "raw.githubusercontent.com").replace("/blob/", "/");
-      }
-
-      // 🔹 URL-Parameter auslesen (z. B. ?boden=parkett)
-      function getQueryVariable(variable) {
-          var query = window.location.search.substring(1);
-          var vars = query.split("&");
-          for (var i = 0; i < vars.length; i++) {
-              var pair = vars[i].split("=");
-              if (pair[0] === variable) {
-                  return decodeURIComponent(pair[1]);
-              }
-          }
-          return null;
-      }
-
-      // 🔹 Verfügbare Bodenbeläge (GitHub RAW Links verwenden!)
-      var bodenTyp = getQueryVariable("boden");
-      var bodenBilder = {
-          "parkett": getRawGitHubURL("https://i.imgur.com/avqSYp3.jpg"),
-          "fliesen": getRawGitHubURL("https://i.imgur.com/avqSYp3.jpg"),
-          "vinyl": getRawGitHubURL("https://i.imgur.com/avqSYp3.jpg")
-      };
-
-      // 🔹 Standardbild, falls kein Boden-Typ angegeben wurde
-      var bodenBild = bodenBilder[bodenTyp] || getRawGitHubURL("https://i.imgur.com/avqSYp3.jpg");
-
-      // 🔹 Bild setzen & sichtbar machen
-      var bodenPlane = document.getElementById("boden");
-      var bodenTextur = document.getElementById("boden-textur");
-
-      bodenTextur.onload = function() {
-          bodenPlane.setAttribute("material", "src: #boden-textur");
-      };
-      bodenTextur.setAttribute("src", bodenBild);
-    </script>
-
-    <!-- 🔹 Verbesserte Drag-&-Pinch-Steuerung -->
-    <script>
-      AFRAME.registerComponent('gesture-handler', {
-        init: function () {
-          var el = this.el;
-          var hammer = new Hammer(el.sceneEl.canvas);
-
-          hammer.get('pinch').set({ enable: true });
-          hammer.get('pan').set({ direction: Hammer.DIRECTION_ALL });
-
-          var scale = 1;
-          var position = el.getAttribute("position");
-
-          // ✅ Y-Koordinate bleibt auf 0 (keine Höhenabweichung mehr)
-          position.y = 0;
-
-          hammer.on("pinchmove", function (evt) {
-            scale = Math.max(0.5, Math.min(3, scale * evt.scale));
-            el.setAttribute("scale", { x: scale, y: scale, z: scale });
-          });
-
-          hammer.on("panmove", function (evt) {
-            position.x += evt.deltaX * 0.0005;
-            position.z += evt.deltaY * 0.0005;
-            el.setAttribute("position", position);
-          });
+        // 🔹 Bild-URL aus GitHub holen (korrektes RAW-Format)
+        function getRawGitHubURL(url) {
+            return url.replace("github.com", "raw.githubusercontent.com").replace("/blob/", "/");
         }
-      });
-    </script>
 
-  </body>
+        // 🔹 URL-Parameter auslesen (z. B. ?boden=parkett)
+        function getQueryVariable(variable) {
+            var query = window.location.search.substring(1);
+            var vars = query.split("&");
+            for (var i = 0; i < vars.length; i++) {
+                var pair = vars[i].split("=");
+                if (pair[0] === variable) {
+                    return decodeURIComponent(pair[1]);
+                }
+            }
+            return null;
+        }
+
+        // 🔹 Verfügbare Bodenbeläge
+        var bodenTyp = getQueryVariable("boden");
+        var bodenBilder = {
+            "parkett": getRawGitHubURL("https://i.imgur.com/avqSYp3.jpg"),
+            "fliesen": getRawGitHubURL("https://i.imgur.com/avqSYp3.jpg"),
+            "vinyl": getRawGitHubURL("https://i.imgur.com/avqSYp3.jpg")
+        };
+
+        var bodenBild = bodenBilder[bodenTyp] || getRawGitHubURL("https://i.imgur.com/avqSYp3.jpg");
+        document.getElementById("boden-textur").setAttribute("src", bodenBild);
+
+        // 🔹 XR Hit-Test für Boden-Tracking
+        AFRAME.registerComponent("hit-test", {
+            init: function () {
+                var scene = this.el;
+                var marker = document.getElementById("placement-marker");
+                var boden = document.getElementById("boden");
+
+                scene.addEventListener("enter-vr", function () {
+                    if (scene.hasAttribute("xr-mode-ui")) {
+                        navigator.xr.requestSession("immersive-ar", {
+                            requiredFeatures: ["hit-test"]
+                        }).then(session => {
+                            session.requestReferenceSpace("local").then(referenceSpace => {
+                                session.requestHitTestSource({ space: referenceSpace }).then(hitTestSource => {
+                                    scene.setAttribute("xr-hit-test-source", hitTestSource);
+                                });
+                            });
+
+                            session.addEventListener("select", function (event) {
+                                let position = marker.getAttribute("position");
+                                boden.setAttribute("position", position);
+                                boden.setAttribute("visible", "true");
+                                marker.setAttribute("visible", "false");
+                            });
+                        });
+                    }
+                });
+            }
+        });
+
+        document.querySelector("a-scene").setAttribute("hit-test", "");
+    </script>
+</body>
 </html>
