--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="margin: 0; overflow: hidden;">
-    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: true;" 
+    <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;" 
              vr-mode-ui="enabled: false" 
              renderer="logarithmicDepthBuffer: true; precision: medium;">
         
@@ -18,7 +18,7 @@
 
         <!-- AR-Marker für den Boden -->
         <a-marker id="boden-marker" type="pattern" 
-                  url="https://raw.githubusercontent.com/jeromeetienne/AR.js/master/aframe/examples/marker-training/examples/patterns/hiro.patt">
+                  url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/patt.hiro">
             <a-plane id="boden" src="#boden-textur" 
                      position="0 0 0" rotation="-90 0 0" 
                      width="5" height="5" visible="false">
