--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             <img id="boden-textur" src="" crossorigin="anonymous">
         </a-assets>
 
-        <!-- AR-Marker für den Boden -->
-        <a-marker id="boden-marker" type="pattern"
-                  url="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/AR-js-org/AR.js/master/data/patt.hiro">
+        <!-- ✅ AR-Marker für den Boden (Kein eigener patt.hiro nötig!) -->
+        <a-marker id="boden-marker" preset="hiro">
             <a-plane id="boden" src="#boden-textur"
                      position="0 0 0" rotation="-90 0 0"
-                     width="5" height="5" visible="true">
+                     width="5" height="5" visible="false">
             </a-plane>
         </a-marker>
 
