--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- ✅ AR-Marker -->
         <a-marker id="boden-marker" preset="hiro"></a-marker>
 
-        <!-- ✅ Boden wird fix auf Y=0 gesetzt -->
+        <!-- ✅ Boden wird unabhängig vom Marker gesetzt -->
         <a-entity id="boden" geometry="primitive: plane; width: 5; height: 5"
                   material="src: #boden-textur"
                   position="0 0 -2"
@@ -36,12 +36,10 @@
     <script>
         console.log("🚀 AR-Szene geladen");
 
-        // 🔹 Funktion für GitHub RAW Bild-Links
         function getRawGitHubURL(url) {
             return url.replace("github.com", "raw.githubusercontent.com").replace("/blob/", "/");
         }
 
-        // 🔹 URL-Parameter auslesen (z. B. ?boden=parkett)
         function getQueryVariable(variable) {
             var query = window.location.search.substring(1);
             var vars = query.split("&");
@@ -54,7 +52,6 @@
             return null;
         }
 
-        // 🔹 Verfügbare Bodenbeläge
         var bodenTyp = getQueryVariable("boden");
         console.log("🧐 Bodenbelag erkannt:", bodenTyp);
 
@@ -64,18 +61,15 @@
             "vinyl": getRawGitHubURL("https://i.imgur.com/avqSYp3.jpg")
         };
 
-        // 🔹 Standardbild setzen, falls kein Boden ausgewählt wurde
         var bodenBild = bodenBilder[bodenTyp] || getRawGitHubURL("https://i.imgur.com/avqSYp3.jpg");
         console.log("🎨 Bild gesetzt auf:", bodenBild);
 
         var bodenTextur = document.getElementById("boden-textur");
 
-        // 🔹 Falls Bild nicht geladen wird, Fehler melden
         bodenTextur.onerror = function () {
             console.error("❌ Fehler beim Laden des Bildes:", bodenBild);
         };
 
-        // 🔹 Sobald das Bild geladen ist, setze es auf das Material
         bodenTextur.onload = function () {
             console.log("✅ Bild erfolgreich geladen");
             document.getElementById("boden").setAttribute("material", "src: #boden-textur");
@@ -84,25 +78,24 @@
 
         let markerDetected = false;
 
-        // 🔹 Marker-Tracking → Boden bleibt auch nach Marker-Verlust sichtbar
         document.getElementById("boden-marker").addEventListener('markerFound', function(event) {
             let boden = document.getElementById("boden");
-            console.log("📌 AR-Marker erkannt → Boden wird auf Höhe 0 gesetzt");
+            console.log("📌 AR-Marker erkannt → Boden wird gesetzt");
 
-            // ✅ Boden direkt auf Y=0 setzen
             let markerObject = event.target.object3D;
             let markerPosition = markerObject.position.clone();
-            markerPosition.y = 0; // Manuell Y=0 setzen
 
-            markerObject.position.set(markerPosition.x, 0, markerPosition.z);
-
-            boden.setAttribute("position", `${markerPosition.x} 0 ${markerPosition.z}`);
+            // ✅ SETZE DIE HÖHE MANUELL AUF 0
+            boden.object3D.position.set(markerPosition.x, 0, markerPosition.z);
             boden.setAttribute("visible", "true");
+
+            // ✅ LÖSE BODEN VOM MARKER → Jetzt bleibt er unabhängig
+            boden.removeAttribute("marker-controls");
 
             markerDetected = true;
         });
 
-        // ✅ Der Boden bleibt sichtbar, auch wenn der Marker verloren geht
+        // ✅ Boden bleibt sichtbar, auch wenn der Marker verloren geht
         document.getElementById("boden-marker").addEventListener('markerLost', function() {
             if (markerDetected) {
                 console.log("🔒 AR-Marker verloren, aber Boden bleibt sichtbar");
