--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <!-- ✅ AR-Marker -->
         <a-marker id="boden-marker" preset="hiro"></a-marker>
 
-        <!-- ✅ Boden wird unabhängig vom Marker gesetzt -->
+        <!-- ✅ Boden wird unabhängig vom Marker auf Höhe 0 fixiert -->
         <a-entity id="boden" geometry="primitive: plane; width: 5; height: 5"
                   material="src: #boden-textur"
-                  position="0 0 -2"
+                  position="0 0 0"  <!-- HIER setzen wir Y=0 FIX! -->
                   rotation="-90 0 0"
                   visible="false">
         </a-entity>
@@ -82,11 +82,13 @@
             let boden = document.getElementById("boden");
             console.log("📌 AR-Marker erkannt → Boden wird gesetzt");
 
-            let markerObject = event.target.object3D;
-            let markerPosition = markerObject.position.clone();
+            let markerPosition = event.target.object3D.position.clone();
 
-            // ✅ SETZE DIE HÖHE MANUELL AUF 0
-            boden.object3D.position.set(markerPosition.x, 0, markerPosition.z);
+            // ✅ DEBUGGING: Zeige die tatsächliche Marker-Höhe an
+            console.log("🔍 Marker Höhe (Y):", markerPosition.y);
+
+            // ✅ Höhe auf 0 fixieren!
+            boden.setAttribute("position", `${markerPosition.x} 0 ${markerPosition.z}`);
             boden.setAttribute("visible", "true");
 
             // ✅ LÖSE BODEN VOM MARKER → Jetzt bleibt er unabhängig
