--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <img id="boden-textur" src="" crossorigin="anonymous">
         </a-assets>
 
-        <!-- ✅ AR-Marker (nur zur Initialisierung) -->
+        <!-- ✅ AR-Marker (zum Initialisieren) -->
         <a-marker id="boden-marker" preset="hiro"></a-marker>
 
-        <!-- ✅ Boden wird unabhängig vom Marker platziert -->
+        <!-- ✅ Boden fixiert auf Y=0 -->
         <a-entity id="boden" geometry="primitive: plane; width: 5; height: 5"
                   material="src: #boden-textur"
-                  position="0 0 -2"
+                  position="0 0 0"
                   rotation="-90 0 0"
                   visible="false">
         </a-entity>
@@ -89,16 +89,14 @@
             console.log("🔍 Marker Position (X, Y, Z):", markerPosition.x, markerPosition.y, markerPosition.z);
 
             // ✅ Höhe fix auf Y=0 setzen (verhindert Schweben)
-            markerPosition.y = 0;
-
-            // ✅ Boden auf fester Position halten
             boden.object3D.position.set(markerPosition.x, 0, markerPosition.z);
             boden.object3D.rotation.set(-Math.PI / 2, 0, 0); // Korrekte Rotation
 
             boden.setAttribute("visible", "true");
 
-            // ✅ LÖSE BODEN VOM MARKER → Bleibt fixiert
+            // ✅ LÖSE BODEN VOM MARKER & FIXIERE POSITION
             boden.removeAttribute("marker-controls");
+            boden.setAttribute("static-body", ""); // Verhindert versehentliches Verschieben
 
             markerDetected = true;
         });
